<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/large_spacing" >

        <FrameLayout
            android:id="@+id/user_avatar_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/middle_spacing"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_font_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_home_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/xxxx_large_spacing"
        android:background="@color/read_gray"
        android:paddingBottom="1px"
        android:paddingTop="1px" >

        <TextView
            android:id="@+id/user_home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_selector_white"
            android:paddingBottom="@dimen/common_spacing"
            android:paddingLeft="@dimen/large_spacing"
            android:paddingRight="@dimen/large_spacing"
            android:paddingTop="@dimen/common_spacing"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_font_size" />
    </LinearLayout>

    <Button
        android:id="@+id/add_friend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xxx_large_spacing"
        android:layout_marginRight="@dimen/xxx_large_spacing"
        android:text="@string/add_friend"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/accept"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xxx_large_spacing"
        android:layout_marginRight="@dimen/xxx_large_spacing"
        android:text="@string/accept"
        android:textColor="@color/white" />

</LinearLayout>